--- a/gb/20/11/9/n12536031.md
+++ b/gb/20/11/9/n12536031.md
@@ -1,78 +1,86 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/timdok351/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/timdok351/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/timdok351/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/timdok351/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/timdok351/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/timdok351/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/timdok351/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/timdok351/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/timdok351/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/timdok351/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/timdok351/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/timdok351/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/timdok351/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/timdok351/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/timdok351/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>浙江化工厂火灾 浓烟扩散至其它市 疑有剧毒</h2>
-<a href="https://git.io/JkUYc"><img width="600" src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/timdok351/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>浙江化工厂火灾 村民无助 浓烟疑有剧毒</h2>
+<a href="https://dqgl8k1bfvgsc.cloudfront.net/C2xChhrtt"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>11月9日11时许，浙江衢州中天东方氟硅材料有限公司发生一起火灾，浓烟呈蘑菇云状将天空遮蔽。（视频截图合成）
 </h6>
 <hr>
-	<p>【大纪元2020年11月09日讯】（大纪元记者萧律生报导）11月9日11时许，<ahref="https://github.com/timdok351/djy/blob/master/gb/tag/%E6%B5%99%E6%B1%9F%E8%A1%A2%E5%B7%9E.md#1">浙江衢州</a><ahref="https://github.com/timdok351/djy/blob/master/gb/tag/%E4%B8%AD%E5%A4%A9%E4%B8%9C%E6%96%B9%E6%B0%9F%E7%A1%85%E6%9D%90%E6%96%99%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8.md#1">中天东方氟硅材料有限公司</a>发生一起<ahref="https://github.com/timdok351/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>，浓烟呈蘑菇云状将天空遮蔽，现场明火截至晚间7时仍未灭完。</p>
-<p>更为严重的是浙江消防称燃烧产物有毒，但衢州官方通报却不告知民众气体有毒。另有消息指，浓烟已经向西南飘散至<ahref="https://github.com/timdok351/djy/blob/master/gb/tag/%E4%B8%8A%E9%A5%B6.md#1">上饶</a>。</p>
-<p>衢州官方微博9日晚间接近19时发通报称，9日11时30分左右，位于衢州市高新园区的浙江<ahref="https://github.com/timdok351/djy/blob/master/gb/tag/%E4%B8%AD%E5%A4%A9%E4%B8%9C%E6%96%B9%E6%B0%9F%E7%A1%85%E6%9D%90%E6%96%99%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8.md#1">中天东方氟硅材料有限公司</a>（以下简称“中天氟硅”）的露天桶装高沸物发生<ahref="https://github.com/timdok351/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>。15时25分，现场含氢硅油装置有明火，硅酮胶厂房和仓库的火已被扑灭，火势总体已被控制。</p>
+	<p>【大纪元2020年11月09日讯】（大纪元记者萧律生、顾晓华采访报导）11月9日11时许，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E6%B5%99%E6%B1%9F%E8%A1%A2%E5%B7%9E.md#1">浙江衢州</a>，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%AD%E5%A4%A9%E4%B8%9C%E6%96%B9%E6%B0%9F%E7%A1%85%E6%9D%90%E6%96%99%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8.md#1">中天东方氟硅材料有限公司</a>发生<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>，浓烟呈蘑菇云状将天空遮蔽，现场明火截至晚间7时仍未灭完。当地村民得不到政府的帮助，都自己判断、自行撤离。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow: hidden;"><a style="width: 100%; height: 170px;" src="https://player.captivate.fm/episode/daacdbb4-a8e1-4a61-b7ac-42e2fe0ba7f0" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多新闻请至<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<p>更为严重的是浙江消防称燃烧产物有毒，但衢州官方通报却不告知民众气体有毒。另有消息指，浓烟已经向西南飘散至<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%8A%E9%A5%B6.md#1">上饶</a>。</p>
+<p>衢州官方微博9日晚间接近19时发通报称，9日11时30分左右，位于衢州市高新园区的浙江<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%AD%E5%A4%A9%E4%B8%9C%E6%96%B9%E6%B0%9F%E7%A1%85%E6%9D%90%E6%96%99%E6%9C%89%E9%99%90%E5%85%AC%E5%8F%B8.md#1">中天东方氟硅材料有限公司</a>（以下简称“中天氟硅”）的露天桶装高沸物发生<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E7%81%AB%E7%81%BE.md#1">火灾</a>。15时25分，现场含氢硅油装置有明火，硅酮胶厂房和仓库的火已被扑灭，火势总体已被控制。</p>
 <p>然而，大纪元记者发现，央视新闻在接近9日19时的直播视频显示，现场仍然有明火，而且稍早前，现场还再次发生爆炸。</p>
 <p>另外，此通报并未透露火灾中弥漫的浓烟是否有毒，只是称着火区域位于中天氟硅西南角，燃烧物主要为高沸物甲基氯硅烷、含氢硅油等。现场流淌火引发三甲氧和白炭黑装置及第五生产车间着火。</p>
 <p>有网民在下面留言质问燃烧物是否有毒。</p>
 <p>据浙江消防官方微博16时41分发布的通报指，中天氟硅火灾的燃烧物质主要是氯硅烷，属于高沸物，燃烧产物有毒。</p>
-<figure id="attachment_12536120" style="width: 593px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/4188fed2bd1ae8ae91154aa9e833e9e6.png"><img class="size-full wp-image-12536120" src="https://i.epochtimes.com/assets/uploads/2020/11/4188fed2bd1ae8ae91154aa9e833e9e6.png" alt="浙江消防官方微博16时41分发布的通报指，燃烧产物有毒。（浙江消防微博）" width="593" b="219" /></a><figcaption class="wp-caption-text">浙江消防官方微博16时41分发布的通报指，燃烧产物有毒。（浙江消防微博）</figcaption></figure>
+<figure id="attachment_12536120" aria-describedby="caption-attachment-12536120" style="width: 593px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/4188fed2bd1ae8ae91154aa9e833e9e6.png"><img class="size-full wp-image-12536120" src="https://i.epochtimes.com/assets/uploads/2020/11/4188fed2bd1ae8ae91154aa9e833e9e6.png" alt="浙江消防官方微博16时41分发布的通报指，燃烧产物有毒。（浙江消防微博）" width="593" b="219" /></a><figcaption id="caption-attachment-12536120" class="wp-caption-text">浙江消防官方微博16时41分发布的通报指，燃烧产物有毒。（浙江消防微博）</figcaption></figure>
+<p>9日晚间7时后，大纪元记者采访到一位距离事发地一二百米的黄家村村民，该村民经营一家农家乐。</p>
+<p>他说，他们村上大概几十户人家离事发地比较近，大家都不敢在家里，都自发撤离，整个村都撤离、到亲戚家等，没有政府人员前来帮助。“我们自己在做判断，看到化工厂那样，我们自己也不敢在那呆了，饭都没吃完就跑了，开车就跑了，什么东西都没带。”</p>
+<p>“味道很重，臭死的味道，是很刺鼻的味道，毒肯定是有毒的了，不管什么烟、肯定都是有毒的，是不是剧毒和微毒那是另外的事情。”该村民说，直到9日晚间，当地还在一直冒烟、小爆炸不断，此次事故影响范围大，都影响到江西了。</p>
+<p>该村民告诉大纪元记者，当时农家乐还有客人，事发后，他们一起撤离，已经撤离到逆风方向三、四公里外的地方。但是，到目前为止，村民见不到政府的人前来，更没有得到权威的说法，只是他们地方领导说最好不要住在家里。</p>
+<p>“那就说明是不能住了，但是我们老百姓没办法，心疼那点钱，你住宾馆、还是要掏钱的，看着没什么问题就在家里睡了。”他说，“我们老百姓懂什么，化学成分根本不知道。”</p>
+<p>该村民表示，真正撤离的不太多，只是跑远一点、隔山观火吧。</p>
 <p>据网传视频显示，事发现场浓烟滚滚，呈蘑菇云状的黑烟将天空遮住，有当地居民表示，天都暗下来了。</p>
-<p style="text-align: center;"><a src=""></a><a href="https://git.io/JkUYc"><img width="600" src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/timdok351/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/R8DBLD-it_E" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<p style="text-align: center;"><a src=""></a><a href="https://git.io/JkUYc"><img width="600" src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/timdok351/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/AdKrSrKYhdE" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<p>网民称该浓烟已经从衢州市经江山市飘至<ahref="https://github.com/timdok351/djy/blob/master/gb/tag/%E4%B8%8A%E9%A5%B6.md#1">上饶</a>市。凤凰周刊称，爆炸发生时，卫星监测到黑烟形成后向西南飘散。 大纪元记者发现，地图上显示，江山市在衢州市西南，上饶市在江山市西南。</p>
-<figure id="attachment_12536119" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/01ce7eca7129c3c95bf41819d39a9705.png"><img class="size-large wp-image-12536119" src="https://i.epochtimes.com/assets/uploads/2020/11/01ce7eca7129c3c95bf41819d39a9705-600x429.png" alt="地图上显示，江山市在衢州市西南，上饶市在江山市西南。（Googe地图）" width="600" b="429" /></a><figcaption class="wp-caption-text">地图上显示，江山市在衢州市西南，上饶市在江山市西南。（Googe地图）</figcaption></figure>
+<p style="text-align: center;"><a src=""></a><a href="https://dqgl8k1bfvgsc.cloudfront.net/C2xChhrtt"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/R8DBLD-it_E" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p style="text-align: center;"><a src=""></a><a href="https://dqgl8k1bfvgsc.cloudfront.net/C2xChhrtt"><img width="600" src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/AdKrSrKYhdE" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></p>
+<p>网民称该浓烟已经从衢州市经江山市飘至<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%B8%8A%E9%A5%B6.md#1">上饶</a>市。凤凰周刊称，爆炸发生时，卫星监测到黑烟形成后向西南飘散。 大纪元记者发现，地图上显示，江山市在衢州市西南，上饶市在江山市西南。</p>
+<figure id="attachment_12536119" aria-describedby="caption-attachment-12536119" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/01ce7eca7129c3c95bf41819d39a9705.png"><img class="size-large wp-image-12536119" src="https://i.epochtimes.com/assets/uploads/2020/11/01ce7eca7129c3c95bf41819d39a9705-600x429.png" alt="地图上显示，江山市在衢州市西南，上饶市在江山市西南。（Googe地图）" width="600" b="429" /></a><figcaption id="caption-attachment-12536119" class="wp-caption-text">地图上显示，江山市在衢州市西南，上饶市在江山市西南。（Googe地图）</figcaption></figure>
 <p>“（衢州市下辖）江山（市）最严重。”“（衢州市衢江区）廿里更惨。”“上饶下午天都黑了。”</p>
 <p>“因为风向，衢州市区还好，都往江西方向飘走了。”“衢州工厂爆炸，烟飘到了我们这边（上饶）。”</p>
 <p>“气体中都是氢氟酸成分，有剧毒，请大家注意，别去廿里方向，小心中毒，切记戴好口罩。”</p>
 <p>“我是江山的，我也喉咙不舒服。”</p>
 <p>“浓烟黑、深灰、灰！衢州本地人，鼻子痒，眼睛干涩、痒。”“</p>
 <p>还有网传上饶一高校辅导员发通知指，气体中都是氢氟酸成分，有剧毒，呼吁民众尽量关窗闭门。</p>
-<figure id="attachment_12536117" style="width: 425px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/006aawDIgy1gkj1tny6wnj30u01o0x5h.jpg"><img class="size-full wp-image-12536117" src="https://i.epochtimes.com/assets/uploads/2020/11/006aawDIgy1gkj1tny6wnj30u01o0x5h.jpg" alt="网传上饶一高校辅导员发通知指，气体中都是氢氟酸成分，有剧毒。（网络图片）" width="425" b="831" /></a><figcaption class="wp-caption-text">网传上饶一高校辅导员发通知指，气体中都是氢氟酸成分，有剧毒。（网络图片）</figcaption></figure>
+<figure id="attachment_12536117" aria-describedby="caption-attachment-12536117" style="width: 425px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/006aawDIgy1gkj1tny6wnj30u01o0x5h.jpg"><img class="size-full wp-image-12536117" src="https://i.epochtimes.com/assets/uploads/2020/11/006aawDIgy1gkj1tny6wnj30u01o0x5h.jpg" alt="网传上饶一高校辅导员发通知指，气体中都是氢氟酸成分，有剧毒。（网络图片）" width="425" b="831" /></a><figcaption id="caption-attachment-12536117" class="wp-caption-text">网传上饶一高校辅导员发通知指，气体中都是氢氟酸成分，有剧毒。（网络图片）</figcaption></figure>
 <p>另有网民说：“有视频，附近鸟都死了，零零散散掉了一地。”</p>
 <p>九派新闻称，涉事企业中天氟硅在2019年4月曾被发现存在重大事故隐患、被要求整改，同年12月该企业完成整改并通过验收。今次，当记者向衢州市应急管理局危险化学品安全监管处质问此事时，一名工作人员称，他才到当地上班，不清楚情况。</p>
 <p>此外，还有网民发现，涉事企业在2013年10月也曾发生爆炸事故。</p>
-<figure id="attachment_12536118" style="width: 440px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/66b6042dly1gkj28ovk2kj20kt112gs0.jpg"><img class="size-full wp-image-12536118" src="https://i.epochtimes.com/assets/uploads/2020/11/66b6042dly1gkj28ovk2kj20kt112gs0.jpg" alt="有网民发现，涉事企业在2013年10月也曾发生爆炸事故。（网络截图）" width="440" b="784" /></a><figcaption class="wp-caption-text">有网民发现，涉事企业在2013年10月也曾发生爆炸事故。（网络截图）</figcaption></figure>
-<p>公开资料显示，中天氟硅于2006年01月25日成立，注资40万，法定代表人邵向东；经营有机硅单体装置项目、有机硅单体副产物综合利用项目（含氢硅油、甲基三甲氧基硅烷项目）、有机硅系列产品及相关新型材料的研发等。2020年11月9日，“天眼查”显示，该公司已有三次环保处罚记录。</p>
-<p>责任编辑：高静</p>
+<figure id="attachment_12536118" aria-describedby="caption-attachment-12536118" style="width: 440px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/66b6042dly1gkj28ovk2kj20kt112gs0.jpg"><img class="size-full wp-image-12536118" src="https://i.epochtimes.com/assets/uploads/2020/11/66b6042dly1gkj28ovk2kj20kt112gs0.jpg" alt="有网民发现，涉事企业在2013年10月也曾发生爆炸事故。（网络截图）" width="440" b="784" /></a><figcaption id="caption-attachment-12536118" class="wp-caption-text">有网民发现，涉事企业在2013年10月也曾发生爆炸事故。（网络截图）</figcaption></figure>
+<p>公开资料显示，中天氟硅于2006年1月25日成立，注资40万，法定代表人邵向东；经营有机硅单体装置项目、有机硅单体副产物综合利用项目（含氢硅油、甲基三甲氧基硅烷项目）、有机硅系列产品及相关新型材料的研发等。2020年11月9日，“天眼查”显示，该公司已有三次环保处罚记录。</p>
+<p>责任编辑：高静 ＃</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/19/4/18/n11196561.md#1">重庆市再有工厂爆炸起火 现场浓烟滚滚</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/8/15/n12333038.md#1">济宁合肥发生爆炸火灾 现场恐怖</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/8/17/n12336832.md#1">【视频】广东清城区大厦突发大火 整栋被烧</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/9/28/n12436952.md#1">【现场视频】浙江海宁一工业园起火 浓烟滚滚</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/4/18/n11196561.md#1">重庆市再有工厂爆炸起火 现场浓烟滚滚</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/8/15/n12333038.md#1">济宁合肥发生爆炸火灾 现场恐怖</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/8/17/n12336832.md#1">【视频】广东清城区大厦突发大火 整栋被烧</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/20/9/28/n12436952.md#1">【现场视频】浙江海宁一工业园起火 浓烟滚滚</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/2/n11563735.md#1" target="_blank">林辉：中共70年来的弥天大谎</a></li><li><a href="https://github.com/timdok351/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/22/n10927324.md#1" target="_blank">跨国企业总经理修炼法轮功 受益无穷</a></li><hr>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/22/n11132948.md#1" target="_blank">93岁老人：李洪志大师给了我第二次生命</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/9/30/n12442873.md#1">《圣经》与《推背图》预言的应验与变换7</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/10/31/n12515858.md#1">预言试析：揭开魔鬼“666”真面目</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/9/30/n12442866.md#1">《圣经》与《推背图》预言的应验与变换6</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/10/20/n12488670.md#1">不知自己死了 一转生就能说话的张生有</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/6/n12531313.md#1">【微历史】苏联解体 戈氏及叶利钦也无奈接受</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/7/n12532767.md#1">【重播】拜登自行宣布当选 美多州集会抗议</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/8/n12533225.md#1">【十字路口】拜登胜选？五大风暴来袭</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/7/n12531603.md#1">摇摆州出现奇怪数据 吹哨人举报费城邮局</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/7/n12532904.md#1">网路热传民间道人解密 美大选惊动天神助川普</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/6/n12529890.md#1">【大选更新11.6】川普：拜登不应错误宣称胜选</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/6/n12529759.md#1">子瑜单脚维持坐姿获赞好厉害 TWICE再获冠军</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/6/n12529961.md#1">SUGA肩膀动手术需休养 暂缺席BTS《BE》宣传</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/8/n12534449.md#1">冯小刚白癜风疑变严重 斑秃明显头部起大包</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/8/n12534699.md#1">唐绮阳预测凶厄之象：今年最后两个月很有事</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/6/n12531299.md#1">调侃蜡像逼真让孩子分不清 吴尊分享育儿经</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/6/n12530332.md#1">茼蒿是抗病毒、减肥的良伴 营养师推荐2吃法</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/3/n12521072.md#1">浴室、厨房是霉菌最喜欢的地方 3妙方除霉</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/6/n12530506.md#1">勾芡食物要少吃 可让血糖飙高 留意5种台湾美食</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/8/n12533391.md#1">台18岁男子昏迷62天 听到“吃鸡排”醒了</a></li>
-<li><a href="https://github.com/timdok351/djy/blob/master/gb/20/11/8/n12533608.md#1">冬天到了！这款大衣专挑瘦子穿 胖妹不要选</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739874.md#1">【马克时空】德国“俄梦”初醒？ 援乌防空导弹、自走炮</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740139.md#1">【神韵早期节目】唐阵（2013）</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740247.md#1">【新闻看点】上海被爆加强封控 居委弄虚作假</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">任贤齐介绍田中老家 吃喝不花钱自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/timdok351/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/timdok351/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/9/n12536031.htm">浙江化工厂火灾 浓烟扩散至其它市 疑有剧毒</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/9/n12536031.htm">浙江化工厂火灾 村民无助 浓烟疑有剧毒</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/timdok351/djy/blob/master/gb/20/11/9/n12536031.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/timdok351/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/timdok351/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/timdok351/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/timdok351/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/timdok351/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/20/11/9/n12536031.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
